# DigiPiano

./: .gitignore  README.md  README.txt
documents/: Piano BOM.xlsx
hw/: baseline_project.kicad_pcb  baseline_project.kicad_prl  baseline_project.kicad_pro  baseline_project.kicad_sch  baseline_project.kicad_sch-bak  fp-info-cache
hw/imported-cad-files/MCP3008T_I_SL/KiCADv6/: 2024-10-17_05-11-56.kicad_sym
hw/imported-cad-files/MCP3008T_I_SL/KiCADv6/footprints.pretty/: SOIC16-N_MC_MCH-L.kicad_mod  SOIC16-N_MC_MCH-M.kicad_mod  SOIC16-N_MC_MCH.kicad_mod
hw/imported-cad-files/SS49E/KiCADv6/: 2024-10-17_05-17-12.kicad_sym
hw/imported-cad-files/SS49E/KiCADv6/footprints.pretty/: SEN3_SS49E_HNW.kicad_mod
hw/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
sw/ESP32Arduino/: PianoUartAndBluetooth.txt  bluetoothfixed.txt
sw/KeyReader/: CMakeLists.txt  a.out  calibrate.c  idleData.txt  pressThresholds
sw/KeyReader/inc/: Communication.h  Notes.h  SensorIn.h  UART.c  Unified_Port_Init.c  esp8266.c  main.h
sw/KeyReader/lib/: README.txt
sw/KeyReader/src/: Communication.c  Notes.c  SensorIn.c  Timer5A.c  UART.c  main.c  startup_gcc.c
sw/SoundGen/: CMakeLists.txt
sw/SoundGen/inc/: PlayNotes.h  SPI_Slave.h  UART.h  main.h
sw/SoundGen/src/: PlayNotes.c  SDCTestMain.c  SPI_Slave.c  UART.c  eDisk.c  main.c  reader.c  startup_gcc.c
sw/SoundGen/template/: template.c  template.h
